--- a/client/index.html
+++ b/client/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React + TS</title>
   </head>
-  <body>
+  <body class="bg-gradient-to-bl from-slate-600 to-slate-900">
     <div id="root" class="w-full"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
