--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,7 @@
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Github Projects Viewer</title>
+    <title>Github Organization Viewer</title>
   </head>
   <body class="bg-gradient-to-bl from-slate-600 to-slate-900">
     <div id="root" class="w-full"></div>
